# Grade-Tracker

./: CMakeLists.txt  README.md  main.cpp
Assignments/: Assignment.cpp  Assignment.h
Repository/: GradeManagement.cpp  GradeManagement.h
Roles/: Person.cpp  Person.h
Roles/Student/: Student.cpp  Student.h
Roles/Teacher/: Teacher.cpp  Teacher.h
